--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.20",
     "zlib": "^1.0.5"
   }
 }
